refactoring for JDK 17